--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon app/server.js",
+    "prod": "cross-env NODE_ENV=production node app/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "mongodb": "^3.2.2"
+    "cross-env": "^5.2.0",
+    "express": "^4.16.4"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
